--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
+sudo: required
 language: python
 python:
   - "2.7"
+services:
+  - docker
+before_install:
+- docker pull debian
 script:
   - docker run --rm -it debian ls
